fixed jumbotron alignement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,15 +136,27 @@
 
 .avataar {
     margin: 20px;
-    flex: 1 20%;
+    /* flex: 1 20%; */
 }
 
 .bio, .prog {
     margin: 20px;
+    padding: 20px;
     flex: 1 35%;
 }
-.hero {
-    display: flex;
-    flex-direction: row;
-}
 
+@media (max-width: 600px) {
+    .col-s-9 {
+        width: 65%;
+    }
+    .col-s-2 {
+        width: 16.66%;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    section.boxBorder.columns {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
